--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Good Day!</title>
+  <link rel=¨stylesheet¨ type=¨text/css¨ href=¨index.css¨>
 </head>
 <div class="text">
   <div>Good</div>
@@ -28,5 +29,6 @@
   <span class="light light6"><span class="beam"></span></span>
   <span class="light light7"><span class="beam"></span></span>
   <span class="light light8"><span class="beam"></span></span>
-</div>
+</div>          
+<script src="index.js"></script>
 </html>
