--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Good Day!</title>
-  <link rel=¨stylesheet¨ type=¨text/css¨ href=¨index.css¨>
+  <meta charset="UTF-8">
+  <title>Good Day!</title>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+  <link rel="stylesheet" href="index.css">
 </head>
 <div class="text">
   <div>Good</div>
@@ -11,7 +14,7 @@
 </div>
 
 <div class="moon">
- <div class="circle-10">
+  <div class="circle-10">
     <div class="circle-11"></div>
   </div>
 </div>
@@ -29,6 +32,7 @@
   <span class="light light6"><span class="beam"></span></span>
   <span class="light light7"><span class="beam"></span></span>
   <span class="light light8"><span class="beam"></span></span>
-</div>          
+</div>
 <script src="index.js"></script>
+
 </html>
