--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="text">
   <div>Good</div>
   <div class="wishme">Wishes</div>
-  <div>Chinu</div>
+  <div>Chinnu</div>
 </div>
 
 <div class="moon">
